managed to get searchbar css correct, just needs to not overlap nav bar when scrolling

--- a/src/Components/CommentForm.css
+++ b/src/Components/CommentForm.css
@@ -1,3 +1,56 @@
-.commentForm {
-    margin-top : 0;
+
+.commentSection {
+    display: grid;
+    grid-template-rows: repeat(2, 1fr);
+    justify-items: center;
+    color: #212121;
 }
+
+.commentForm {
+    margin : 30px 0px;
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    border: 2px solid black;
+}
+
+.commentForm input {
+    border-radius: 20px ;
+    border: 2px solid #e8e5e5;
+    align-self: center;  
+}
+
+.commentForm label {
+    display: flex;
+    flex-direction: column;
+    margin-top: 10px;
+}
+
+label input {
+    height: 25px;
+    width: 300px;
+    text-indent: 10px;
+}
+
+span {
+    width: 50px;
+    margin-left: 10%;
+}
+
+.commentButton {
+    width: 200px;
+    border-radius: 20px ;
+    margin-bottom: 20px;
+}
+
+.commentButton:hover {
+    transform: scale(1.1);
+    cursor: pointer;
+    border: 2px solid  #f40402;
+}
+
+.commentForm input:focus {
+    outline: .2px solid #f40402;
+}
+
