--- a/src/Components/SearchBar.css
+++ b/src/Components/SearchBar.css
@@ -1,18 +1,21 @@
 form {
     display: flex;
-    justify-content:space-around;
+    /* justify-content:space-around; */
     margin-top: 100px;
 }
 
 .textbox {
-    width: 50%;
-    margin-right: 5px ;
+    width: 450px;
+    max-width: 500px;
+    
+    margin-left: 30%;
     border-radius: 20px;
     border: 2px solid #e8e5e5;
     text-indent: 10px;
+    position: relative;
 }
 .textbox:focus {
-    outline: .2px solid #c3c0c0;
+    outline: 2px solid #f40402;
 }
 
 input {
@@ -21,10 +24,11 @@ input {
 
 /* test css */
 .button {
-    width: 6%;
+    width: 45px;
+    max-width: 45px;
     height:40px;
-    position: absolute;
-    margin-left: 22% ;
+    position: relative;
+    right: 50px;
     border-top-right-radius: 20px ;
     border-bottom-right-radius: 20px;
     background-color: #f8f8f8;
