--- a/src/Components/VideoThumbnail.css
+++ b/src/Components/VideoThumbnail.css
@@ -34,4 +34,5 @@
 .videoThumbnail:hover {
   transform: scale(1.1);
   cursor: pointer;
+  border: 2px solid #f40402 ;
 }
